--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "r",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alisq.github.io/TypeWest-2025-T01",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
